[package]
name = "hawkeye"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemstat = "0.2.2"
tokio = {version = "1.0", features = ["macros", "rt-multi-thread", "fs"]}
clap = { version = "4.1", features = ["derive"] }
async-trait = "0.1.64"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
